Implement correct intrinsic width calculation (for container) for elements with specified height properties and an intrinsic ratio.  b=364066  r+sr=bzbarsky